<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/productNameEditText"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:hint="Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/productPriceEditText"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/price"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <EditText
                android:id="@+id/productDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/description"
                android:inputType="textLongMessage" />

            <Button
                android:id="@+id/button_uploadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="upload_image"
                android:text="@string/upload_image" />

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[10]" />


            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>